[package]
name = "nbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bincode = "2.0.0-alpha.2"
byteorder = "1.4.3"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
thiserror = "1.0.30"
