[package]
name = "nbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bincode = "2.0.0-beta.2"
byteorder = "1.4.3"
clap = { version = "3.0.13", features = ["derive"] }
ctrlc = { version = "3.2.1", features = ["termination"] }
thiserror = "1.0.30"

[dev-dependencies]
serde_json = "1.0.78"
